Added Trending Product section

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="col-md-4 mt-2"><div class="card border-0" >
                     <img src="images/shoe.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Snaker and Keds</p>
+                      <p class="card-text text-secondary">Snaker and Keds</p>
 
                       <div class="d-flex justify-content-between">
                         <span class="text-primary">$145.00</span>
@@ -106,7 +106,7 @@
                 <div class="col-md-4 mt-2"><div class="card border-0" >
                     <img src="images/jeans.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Snaker and Keds</p>
+                      <p class="card-text text-secondary">Jeans</p>
 
                       <div class="d-flex justify-content-between">
                         <span class="text-primary">$145.00</span>
@@ -124,7 +124,7 @@
                 <div class="col-md-4 mt-2"><div class="card border-0" >
                     <img src="images/watch.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Snaker and Keds</p>
+                      <p class="card-text text-secondary">Watch</p>
 
                       <div class="d-flex justify-content-between">
                         <span class="text-primary">$145.00</span>
@@ -142,7 +142,7 @@
                 <div class="col-md-4 mt-2"><div class="card border-0" >
                     <img src="images/t-shirt.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Snaker and Keds</p>
+                      <p class="card-text text-secondary">T-shirt</p>
 
                       <div class="d-flex justify-content-between">
                         <span class="text-primary">$145.00</span>
@@ -160,7 +160,7 @@
                 <div class="col-md-4 mt-2"><div class="card border-0" >
                     <img src="images/half-pent.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Snaker and Keds</p>
+                      <p class="card-text text-secondary">Half pant</p>
 
                       <div class="d-flex justify-content-between">
                         <span class="text-primary">$145.00</span>
@@ -178,7 +178,7 @@
                 <div class="col-md-4 mt-2"><div class="card border-0" >
                     <img src="images/cap.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Snaker and Keds</p>
+                      <p class="card-text text-secondary">Cap</p>
 
                       <div class="d-flex justify-content-between">
                         <span class="text-primary">$145.00</span>
@@ -195,6 +195,225 @@
                 </div>
             </div>
         </div>
+      </section>
+
+
+      <section class="container">
+
+        <div class="text-center my-5">
+            <p class="h4">Trending Products</p>
+        </div>
+
+        <div class="row">
+            <div class="col-md-3 shadow py-2 mt-3">
+                <div class="d-flex justify-content-between">
+                    <span class="bg-danger px-3 rounded text-white">Sale</span>
+                    <span class="text-danger"><i class="bi bi-code"></i>Compare</span>
+                </div>
+
+                <img src="images/headphone.jpg" class="img-fluid" alt="">
+
+                <span class="text-secondary">Headphones</span>
+                <p class="h6">Wireless Bluetooth Headphones</p>
+
+                <div class="d-flex justify-content-between">
+                    <span class="text-primary">$190.00</span>
+                    <span class="text-warning">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-half"></i>
+                        <i class="bi bi-star"></i>
+                    </span>
+                </div>
+
+                <button class="btn btn-danger w-100 my-3"><i class="bi bi-cart"></i> Add to Cart</button>
+                <a href="#" class="btn btn-outline-secondary w-100"><i class="bi bi-eye"></i> Quick View</a>
+            </div>
+
+            <div class="col-md-3 shadow py-2 mt-3">
+                <div class="d-flex justify-content-between">
+                    <span class="bg-danger px-3 rounded text-white">Sale</span>
+                    <span class="text-danger"><i class="bi bi-code"></i>Compare</span>
+                </div>
+
+                <img src="images/freeze.jpg" class="img-fluid" alt="">
+
+                <span class="text-secondary">Apple Box</span>
+                <p class="h6">Functional Apple Gadgets</p>
+
+                <div class="d-flex justify-content-between">
+                    <span class="text-primary">$190.00</span>
+                    <span class="text-warning">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-half"></i>
+                        <i class="bi bi-star"></i>
+                    </span>
+                </div>
+
+                <button class="btn btn-danger w-100 my-3"><i class="bi bi-cart"></i> Add to Cart</button>
+                <a href="#" class="btn btn-outline-secondary w-100"><i class="bi bi-eye"></i> Quick View</a>
+            </div>
+
+            <div class="col-md-3 shadow py-2 mt-3">
+                <div class="d-flex justify-content-between">
+                    <span class="bg-danger px-3 rounded text-white">Sale</span>
+                    <span class="text-danger"><i class="bi bi-code"></i>Compare</span>
+                </div>
+
+                <img src="images/lgtv.jpg" class="img-fluid" alt="">
+
+                <span class="text-secondary">Smart TV</span>
+                <p class="h6">Android Smart TV and Monitor</p>
+
+                <div class="d-flex justify-content-between">
+                    <span class="text-primary">$190.00</span>
+                    <span class="text-warning">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-half"></i>
+                        <i class="bi bi-star"></i>
+                    </span>
+                </div>
+
+                <button class="btn btn-danger w-100 my-3"><i class="bi bi-cart"></i> Add to Cart</button>
+                <a href="#" class="btn btn-outline-secondary w-100"><i class="bi bi-eye"></i> Quick View</a>
+            </div>
+
+            <div class="col-md-3 shadow py-2 mt-3">
+                <div class="d-flex justify-content-between">
+                    <span class="bg-danger px-3 rounded text-white">Sale</span>
+                    <span class="text-danger"><i class="bi bi-code"></i>Compare</span>
+                </div>
+
+                <img src="images/mp3box.jpg" class="img-fluid" alt="">
+
+                <span class="text-secondary">MP3 Box</span>
+                <p class="h6">MP3 Sount Box</p>
+
+                <div class="d-flex justify-content-between">
+                    <span class="text-primary">$190.00</span>
+                    <span class="text-warning">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-half"></i>
+                        <i class="bi bi-star"></i>
+                    </span>
+                </div>
+
+                <button class="btn btn-danger w-100 my-3"><i class="bi bi-cart"></i> Add to Cart</button>
+                <a href="#" class="btn btn-outline-secondary w-100"><i class="bi bi-eye"></i> Quick View</a>
+            </div>
+
+            <div class="col-md-3 shadow py-2 mt-3">
+                <div class="d-flex justify-content-between">
+                    <span class="bg-danger px-3 rounded text-white">Sale</span>
+                    <span class="text-danger"><i class="bi bi-code"></i>Compare</span>
+                </div>
+
+                <img src="images/trandwatch.jpg" class="img-fluid" alt="">
+
+                <span class="text-secondary">Bluetooth Watch</span>
+                <p class="h6">Verient Type of Watch</p>
+
+                <div class="d-flex justify-content-between">
+                    <span class="text-primary">$190.00</span>
+                    <span class="text-warning">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-half"></i>
+                        <i class="bi bi-star"></i>
+                    </span>
+                </div>
+
+                <button class="btn btn-danger w-100 my-3"><i class="bi bi-cart"></i> Add to Cart</button>
+                <a href="#" class="btn btn-outline-secondary w-100"><i class="bi bi-eye"></i> Quick View</a>
+            </div>
+
+            <div class="col-md-3 shadow py-2 mt-3">
+                <div class="d-flex justify-content-between">
+                    <span class="bg-danger px-3 rounded text-white">Sale</span>
+                    <span class="text-danger"><i class="bi bi-code"></i>Compare</span>
+                </div>
+
+                <img src="images/smartphone.jpg" class="img-fluid" alt="">
+
+                <span class="text-secondary">Smart Phone
+                <p class="h6">Multiple Brand Smart Phone</p>
+
+                <div class="d-flex justify-content-between">
+                    <span class="text-primary">$190.00</span>
+                    <span class="text-warning">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-half"></i>
+                        <i class="bi bi-star"></i>
+                    </span>
+                </div>
+
+                <button class="btn btn-danger w-100 my-3"><i class="bi bi-cart"></i> Add to Cart</button>
+                <a href="#" class="btn btn-outline-secondary w-100"><i class="bi bi-eye"></i> Quick View</a>
+            </div>
+
+            <div class="col-md-3 shadow py-2 mt-3">
+                <div class="d-flex justify-content-between">
+                    <span class="bg-danger px-3 rounded text-white">Sale</span>
+                    <span class="text-danger"><i class="bi bi-code"></i>Compare</span>
+                </div>
+
+                <img src="images/laptop.jpg" class="img-fluid" alt="">
+
+                <span class="text-secondary">Laptop</span>
+                <p class="h6">Multiple Brand Laptop</p>
+
+                <div class="d-flex justify-content-between">
+                    <span class="text-primary">$190.00</span>
+                    <span class="text-warning">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-half"></i>
+                        <i class="bi bi-star"></i>
+                    </span>
+                </div>
+
+                <button class="btn btn-danger w-100 my-3"><i class="bi bi-cart"></i> Add to Cart</button>
+                <a href="#" class="btn btn-outline-secondary w-100"><i class="bi bi-eye"></i> Quick View</a>
+            </div>
+
+            <div class="col-md-3 shadow py-2 mt-3">
+                <div class="d-flex justify-content-between">
+                    <span class="bg-danger px-3 rounded text-white">Sale</span>
+                    <span class="text-danger"><i class="bi bi-code"></i>Compare</span>
+                </div>
+
+                <img src="images/trandwatch-2.jpg" class="img-fluid" alt="">
+
+                <span class="text-secondary">Smart Watch</span>
+                <p class="h6">Mobile Connected Smart Watch</p>
+
+                <div class="d-flex justify-content-between">
+                    <span class="text-primary">$190.00</span>
+                    <span class="text-warning">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-half"></i>
+                        <i class="bi bi-star"></i>
+                    </span>
+                </div>
+
+                <button class="btn btn-danger w-100 my-3"><i class="bi bi-cart"></i> Add to Cart</button>
+                <a href="#" class="btn btn-outline-secondary w-100"><i class="bi bi-eye"></i> Quick View</a>
+            </div>
+        </div>
+        
       </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
