--- a/index.html
+++ b/index.html
@@ -496,7 +496,65 @@
                 <img src="images/knowMeMore_bg_none.png" class="w-100">
             </div>
         </div>
+      </section>
+
+
+      <section class="container">
+
+        <p class="h4 py-5">Shop By Brand</p>
+
+        <div class="row bg-white">
+            <div class="col-md-2 border border-1 py-5 text-center">
+                <img class="img-fluid" src="images/shopbybrand-1.png">
+            </div>
+
+            <div class="col-md-2 border border-1 py-5 text-center">
+                <img class="img-fluid" src="images/shopbybrand-2.png">
+            </div>
+
+            <div class="col-md-2 border border-1 py-5 text-center">
+                <img class="img-fluid" src="images/shopbybrand-3.png">
+            </div>
+
+            <div class="col-md-2 border border-1 py-5 text-center">
+                <img class="img-fluid" src="images/shopbybrand-4.png">
+            </div>
+
+            <div class="col-md-2 border border-1 py-5 text-center">
+                <img class="img-fluid" src="images/shopbybrand-5.png">
+            </div>
+
+            <div class="col-md-2 border border-1 py-5 text-center">
+                <img class="img-fluid" src="images/shopbybrand-6.png">
+            </div>
+
+            <div class="col-md-2 border border-1 py-5 text-center">
+                <img class="img-fluid" src="images/shopbybrand-7.png">
+            </div>
+
+            <div class="col-md-2 border border-1 py-5 text-center">
+                <img class="img-fluid" src="images/shopbybrand-8.png">
+            </div>
+
+            <div class="col-md-2 border border-1 py-5 text-center">
+                <img class="img-fluid" src="images/shopbybrand-9.png">
+            </div>
+
+            <div class="col-md-2 border border-1 py-5 text-center">
+                <img class="img-fluid" src="images/shopbybrand-10.png">
+            </div>
+
+            <div class="col-md-2 border border-1 py-5 text-center">
+                <img class="img-fluid" src="images/shopbybrand-11.png">
+            </div>
+
+            <div class="col-md-2 border border-1 py-5 text-center">
+                <img class="img-fluid" src="images/shopbybrand-12.png">
+            </div>
+        </div>
+
         
+
       </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
