--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CDN link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body class="bg-light">
+<body class="bg-warning">
     <nav class="navbar navbar-expand-lg bg-danger ">
         <div class="container-fluid">
           <a class="navbar-brand text-white fs-4" href="#">LOGO</a>
@@ -317,8 +317,8 @@
 
                 <img src="images/trandwatch.jpg" class="img-fluid" alt="">
 
-                <span class="text-secondary">Bluetooth Watch</span>
-                <p class="h6">Verient Type Watch</p>
+                <span class="text-secondary">Digital Watch</span>
+                <p class="h6">Brand Digital Watch</p>
 
                 <div class="d-flex justify-content-between">
                     <span class="text-primary">$190.00</span>
@@ -552,10 +552,151 @@
                 <img class="img-fluid" src="images/shopbybrand-12.png">
             </div>
         </div>
-
-        
-
       </section>
+
+
+      <section class="container my-5">
+
+        <p class="h4">Top Selling Products</p>
+
+        <div class="row justify-content-between">
+
+            <div class="col-md-5 d-flex align-items-center justify-content-around bg-white p-5 mt-5">
+
+                <div class="col-5">
+                    <img class="img-fluid" src="images/topSelling-1.jpg">
+
+                </div>
+
+                <div class="col-5">
+
+                    <p class="text-warning">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                    </p>
+
+                    <p class="mt-5">
+                        Senmei ipsum dolore eiusmod dolor officia do nisi 
+                    </p>
+
+                    <p>
+                        <span class="fw-bold text-secondary me-3"><s>$145.00</s></span>
+                        <span class="fw-bold text-danger">$125.00</span>
+                    </p>
+                    <button class="btn btn-danger">Add to Cart</button>
+
+                </div>
+
+            </div>
+
+
+            <div class="col-md-5 d-flex align-items-center justify-content-around bg-white p-5 mt-5">
+
+                <div class="col-5">
+                    <img class="img-fluid" src="images/topSelling-2.jpg">
+
+                </div>
+
+                <div class="col-5">
+
+                    <p class="text-warning">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                    </p>
+
+                    <p>
+                        Canopoly duis voluptate dolor sunt sit adipisicing in
+                    </p>
+
+                    <p>
+                        <span class="fw-bold text-secondary me-3"><s>$145.00</s></span>
+                        <span class="fw-bold text-danger">$125.00</span>
+                    </p>
+                    <button class="btn btn-danger">Add to Cart</button>
+
+                </div>
+
+            </div>
+
+            <div class="col-md-5 d-flex align-items-center justify-content-around bg-white p-5 mt-5">
+
+                <div class="col-5">
+                    <img class="img-fluid" src="images/toSelling-3.jpg">
+
+                </div>
+
+                <div class="col-5">
+
+                    <p class="text-warning">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                    </p>
+
+                    <p>
+                        Canopoly duis voluptate dolor sunt sit adipisicing in
+                    </p>
+
+                    <p>
+                        <span class="fw-bold text-secondary me-3"><s>$145.00</s></span>
+                        <span class="fw-bold text-danger">$125.00</span>
+                    </p>
+                    <button class="btn btn-danger">Add to Cart</button>
+
+                </div>
+
+            </div>
+
+            <div class="col-md-5 d-flex align-items-center justify-content-around bg-white p-5 mt-5">
+
+                <div class="col-5">
+                    <img class="img-fluid" src="images/topSelling-4.jpg">
+
+                </div>
+
+                <div class="col-5">
+
+                    <p class="text-warning">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                    </p>
+
+                    <p>
+                        Canopoly duis voluptate dolor sunt sit adipisicing in
+                    </p>
+
+                    <p>
+                        <span class="fw-bold text-secondary me-3"><s>$145.00</s></span>
+                        <span class="fw-bold text-danger">$125.00</span>
+                    </p>
+                    <button class="btn btn-danger">Add to Cart</button>
+
+                </div>
+
+            </div>
+
+        </div>
+      </section>
+
+
+      <section class="container my-5">
+        <a href="https://www.alibaba.com/">
+            <div style="background-image: url(images/headphoneSlide.png); height:300px; background-repeat: no-repeat; background-position: center;  background-size:cover;">
+            </div>
+        </a>
+      </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
