--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
 
         <p class="h4 text-center pt-5">Order Your Products</p>
 
-        <div class="row">
+        <div class="row d-flex align-items-center">
 
             <div class="col-md-6">
                 <form class="">
@@ -764,6 +764,64 @@
         </div>
 
       </section>
+
+
+      <footer class="container">
+        <p class="h2 fw-bold text-center text-danger mt-5">Shop Name</p>
+
+        <hr class="border border-1 border-danger">
+
+        <div class="row">
+            <div class="col-md-3">
+                <p class="h5 mb-4">About Us</p>
+                <p>We know there are a lot of threa developers our but we pride into a firm in the industry. </p>            </div>
+
+            <div class="col-md-3">
+                <p class="h5 mb-4">Feature</p>
+                <p>
+                    <a href="#" class="text-decoration-none">About Us</a>
+                </p>
+                <p>
+                    <a href="#" class="text-decoration-none">Best Product</a>
+                </p>
+                <p>
+                    <a href="#" class="text-decoration-none">Terms & Condition</a>
+                </p>
+            </div>
+
+            <div class="col-md-3">
+                <p class="h5 mb-4">General Links</p>
+                <p>
+                    <a href="#" class="text-decoration-none">Blog</a>
+                </p>
+                <p>
+                    <a href="#" class="text-decoration-none">Tracking Orders </a>
+                </p>
+                <p>
+                    <a href="#" class="text-decoration-none">Become Seller </a>
+                </p>
+            </div>
+
+            <div class="col-md-3">
+                <p class="h5 mb-4">Helpful</p>
+                <p>
+                    <a href="#" class="text-decoration-none">Flash Sale</a>
+                </p>
+                <p>
+                    <a href="#" class="text-decoration-none">FAQ </a>
+                </p>
+                <p>
+                    <a href="#" class="text-decoration-none">Support </a>
+                </p>
+            </div>
+        </div>
+
+        <hr class="border border-1 border-danger">
+
+        <div class="text-center mt-4 mb-5">
+            &copy; Copyright || 2024
+        </div>
+      </footer>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
