--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CDN link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body class="bg-warning">
+<body class="bg-light">
     <nav class="navbar navbar-expand-lg bg-danger ">
         <div class="container-fluid">
           <a class="navbar-brand text-white fs-4" href="#">LOGO</a>
@@ -31,7 +31,7 @@
                 <a class="nav-link text-white" href="#">Contact Us</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle text-white me-4" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Menu
                 </a>
                 <ul class="dropdown-menu ">
@@ -55,16 +55,10 @@
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner ">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="images/1.png" class="d-block  w-100" alt="...">
+                <img src="images/slider-01.jpg" class="d-block  w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="10000">
-                <img src="images/2.png" class="d-block w-100" alt="...">
-              </div>
-              <div  class="carousel-item" data-bs-interval="10000">
-                <img src="images/3.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item" data-bs-interval="10000">
-                <img src="images/4.png" class="d-block w-100" alt="...">
+                <img src="images/slider-04.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -767,7 +761,7 @@
 
 
       <footer class="container">
-        <p class="h2 fw-bold text-center text-danger mt-5">Shop Name</p>
+        <p class="h2 fw-bold text-center text-warning mt-5">Shop Name</p>
 
         <hr class="border border-1 border-danger">
 
